Force the #header height to auto (with !important) to prevent it ending up too small.

--- a/sourcefiles/scss/style.scss
+++ b/sourcefiles/scss/style.scss
@@ -51,10 +51,8 @@ FIXME : complete reorg header
 
 #header
 {
-	/* Lower space
-	height:145px;
-	*/
-	height:150px;
+/* Force height to be such as required */
+	height:auto !important;
 	overflow:hidden;
 	border:none;
 	background: none no-repeat;
